Add Table in Product

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -225,7 +225,7 @@
                             </a>
                         </li>
                         <li class="nav-item menu-open">
-                            <a href="#" class="nav-link">
+                            <a asp-controller="Product" asp-action="Index"   class="nav-link">
                                 <i class="fa fa-product" aria-hidden="true"></i>
                                 <p>Product List</p>
                             </a>
